--- a/WebShopApp/WebShopApp/Views/Shared/_LoginPartial.cshtml
+++ b/WebShopApp/WebShopApp/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
-﻿@using WebShopApp.Infrastrucutre.Data.Domain
-@using Microsoft.AspNetCore.Identity
+﻿@using Microsoft.AspNetCore.Identity
+@using WebShopApp.Infrastructure.Data.Domain
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
