--- a/WebShopApp/WebShopApp/Views/Shared/_Layout.cshtml
+++ b/WebShopApp/WebShopApp/Views/Shared/_Layout.cshtml
@@ -34,7 +34,16 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="MyOrders">My Orders</a>
                             </li>
                         }
+                        <li class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                Brands
+                            </button>
 
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                <li><a class="dropdown-item" href="/Product?SearchStringBrandName=Dell">DELL</a></li>
+                                <li><a class="dropdown-item" href="/Product?SearchStringBrandName=Acer">Acer</a></li>
+                            </ul>
+                        </li>
                         @if ((this.User.Identity.IsAuthenticated) && this.User.IsInRole("Administrator"))
                         {
                             <li class="dropdown">
@@ -43,15 +52,12 @@
                                 </button>
 
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                    <li><a class="dropdown-item" href="/Statistics/Clients">Clients</a></li>
+                                    <li><a class="dropdown-item" href="/Client/Index">Clients</a></li>
                                     <li><a class="dropdown-item" href="/Order/Index">Orders</a></li>
+                                    <li><a class="dropdown-item" href="/Statistic/Index">Statistic</a></li>
                                 </ul>
-
                             </li>
                         }
-                      
-                        
-
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
