--- a/WebShopApp/WebShopApp/Views/Shared/_Layout.cshtml
+++ b/WebShopApp/WebShopApp/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                                 <li><a class="dropdown-item" href="/Product?SearchStringBrandName=Dell">DELL</a></li>
                                 <li><a class="dropdown-item" href="/Product?SearchStringBrandName=Acer">Acer</a></li>
+                                <li><a class="dropdown-item" href="/Product?SearchStringBrandName=Asus">Asus</a></li>
                             </ul>
                         </li>
                         @if ((this.User.Identity.IsAuthenticated) && this.User.IsInRole("Administrator"))
