--- a/WebShopApp/WebShopApp/Views/Order/MyOrders.cshtml
+++ b/WebShopApp/WebShopApp/Views/Order/MyOrders.cshtml
@@ -2,7 +2,7 @@
 @{
 	ViewData["Title"] = "Index";
 }
-<h1>All Orders</h1>
+<h1>My Orders</h1>
 <table class="table">
 	<thead>
 		<tr>
@@ -10,12 +10,6 @@
 				@Html.DisplayNameFor(model => model.OrderDate)
 			</th>
 			<th>
-				@Html.DisplayNameFor(model => model.User)
-			</th>
-			<th>
-
-				10
-
 				@Html.DisplayNameFor(model => model.Product)
 			</th>
 			<th>
@@ -42,9 +36,6 @@
 			<tr>
 				<td>
 					@Html.DisplayFor(modelItem => item.OrderDate)
-				</td>
-				<td>
-					@Html.DisplayFor(modelItem => item.User)
 				</td>
 				<td>
 					@Html.DisplayFor(modelItem => item.Product)
