--- a/WebShopApp/WebShopApp/Views/Product/Index.cshtml
+++ b/WebShopApp/WebShopApp/Views/Product/Index.cshtml
@@ -95,7 +95,7 @@
 
                     @if (this.User.Identity.IsAuthenticated)
                     {
-                        <a asp-action="Create" asp-route-id="@item.Id" class="btn btn-warning">Order</a>
+                        <a asp-action="Create" asp-controller="Order" asp-route-id="@item.Id" class="btn btn-warning">Order</a>
                     }
 
                     @if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Administrator")))
